RESOLVED FIXED300699
[CSS Zoom] Fix zoom factor for line-height
https://bugs.webkit.org/show_bug.cgi?id=300699
Summary [CSS Zoom] Fix zoom factor for line-height
Vitor Roriz
Reported 2025-10-14 07:25:51 PDT
Fix zoom factor for letter-spacing
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-14 07:25:58 PDT
Vitor Roriz
Comment 2 2025-10-14 07:30:40 PDT
EWS
Comment 3 2025-10-15 13:37:33 PDT
Committed 301577@main (722ac931d4b8): <https://commits.webkit.org/301577@main> Reviewed commits have been landed. Closing PR #52298 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.