[CSS Zoom] Fix zoom factor for line-height rdar://162601748 https://bugs.webkit.org/show_bug.cgi?id=300699

Reviewed by Tim Nguyen and Alan Baradlay.

We want to store the unzoomed line-height  value at RenderStyle
and the zoomeed value at FontCascade.

We are just handling line-height integration of zoom for EvaluationTimeZoomEnabled here.
We are not handling font related units, which is tracked by another bug (http://webkit.org/b/299816)
for that reason, we are explicitly disabling EvaluationTimeZoomEnabled for tests that apply zoom
to elements that present line-height with font-related units (percentage, em, rem...)

* LayoutTests/TestExpectations:
* LayoutTests/fast/css/line-height-basics.html:
* LayoutTests/fast/css/line-height-zoom-get-computed-style.html:
* LayoutTests/fast/text/line-height-minimumFontSize-zoom.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/relative-units.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/svg-computed-style-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-viewport/zoom/svg-computed-style.html:
* LayoutTests/printing/page-rule-selection.html:
* LayoutTests/svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm:
* Source/WebCore/layout/formattingContexts/inline/InlineLevelBox.h:
(WebCore::Layout::InlineLevelBox::preferredLineHeight const):
* Source/WebCore/layout/formattingContexts/inline/InlineLevelBoxInlines.h:
(WebCore::Layout::m_style):
* Source/WebCore/page/PrintContext.cpp:
(WebCore::PrintContext::pageProperty):
* Source/WebCore/rendering/TextAutoSizing.cpp:
(WebCore::TextAutoSizingValue::adjustTextNodeSizes):
* Source/WebCore/rendering/style/AutosizeStatus.cpp:
(WebCore::AutosizeStatus::probablyContainsASmallFixedNumberOfLines):
(WebCore::AutosizeStatus::computeStatus):
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::isIdempotentTextAutosizingCandidate const):
(WebCore::RenderStyle::computeLineHeight const):
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustmentForTextAutosizing):
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::zoomWithTextZoomFactor):
* Source/WebCore/style/values/inline/StyleLineHeight.h:
* Source/WebCore/style/values/text/StyleLetterSpacing.cpp:
(WebCore::Style::CSSValueConversion<LetterSpacing>::operator):
* Source/WebCore/style/values/text/StyleWordSpacing.cpp:
(WebCore::Style::CSSValueConversion<WordSpacing>::operator):

Canonical link: https://commits.webkit.org/301577@main