Source/WebCore/style/values/text/StyleWordSpacing.cpp
@@ -28,6 +28,7 @@
 #include "FrameDestructionObserverInlines.h"
 #include "RenderStyleInlines.h"
 #include "StyleBuilderChecking.h"
+#include "StyleBuilderConverter.h"
 #include "StyleLengthWrapper+CSSValueConversion.h"
 
 namespace WebCore {
@@ -36,15 +37,6 @@ namespace Style {
 auto CSSValueConversion<WordSpacing>::operator()(BuilderState& state, const CSSValue& value) -> WordSpacing
 {
     auto cssToLengthConversionDataWithTextZoomFactor = [](BuilderState& state) -> CSSToLengthConversionData {
-        auto zoomWithTextZoomFactor = [](BuilderState& state) -> float {
-            if (RefPtr frame = state.document().frame()) {
-                float textZoomFactor = state.style().textZoom() != TextZoom::Reset ? frame->textZoomFactor() : 1.0f;
-                auto usedZoom = shouldUseEvaluationTimeZoom(state) ? 1.0f : state.style().usedZoom();
-                return usedZoom * textZoomFactor;
-            }
-            return state.cssToLengthConversionData().zoom();
-        };
-
         auto zoom = zoomWithTextZoomFactor(state);
         if (zoom == state.cssToLengthConversionData().zoom())
             return state.cssToLengthConversionData();
